--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -33,7 +33,10 @@ RUN pip install virtualenv \
     && wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O /tmp/miniconda.sh \
     && bash /tmp/miniconda.sh -b -p /opt/conda \
     && rm /tmp/miniconda.sh \
-    && /opt/conda/bin/conda init
+    && /opt/conda/bin/conda init \
+    && /opt/conda/bin/conda config --remove channels defaults \
+    && /opt/conda/bin/conda config --add channels conda-forge \
+    && /opt/conda/bin/conda config --set channel_priority strict
 
 ARG CONDA_ENV_NAME=agent
 ARG PYTHON_VERSION=3.11
@@ -41,8 +44,8 @@ ARG REQUIREMENTS=/tmp/requirements.txt
 
 COPY environment/requirements.txt ${REQUIREMENTS}
 
-# create conda environment and optionally install the requirements to it
-RUN /opt/conda/bin/conda create -n ${CONDA_ENV_NAME} python=${PYTHON_VERSION} -y
+# create conda environment using only conda-forge channel
+RUN /opt/conda/bin/conda create -n ${CONDA_ENV_NAME} python=${PYTHON_VERSION} -y --override-channels --channel conda-forge
 ARG INSTALL_HEAVY_DEPENDENCIES=true
 ENV INSTALL_HEAVY_DEPENDENCIES=${INSTALL_HEAVY_DEPENDENCIES}
 
@@ -59,7 +62,7 @@ ENV PATH="/opt/conda/bin:${PATH}"
 
 # Install stuff for the grading server: mlebench and flask
 COPY . /mlebench
-RUN /opt/conda/bin/conda create -n mleb python=3.11 -y
+RUN /opt/conda/bin/conda create -n mleb python=3.11 -y --override-channels --channel conda-forge
 RUN /opt/conda/bin/conda run -n mleb pip install flask && \
     /opt/conda/bin/conda run -n mleb pip install -e /mlebench
 
