--- a/agents/aide/Dockerfile
+++ b/agents/aide/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 
 # create conda environment and install the requirements to it
 RUN conda run -n ${CONDA_ENV_NAME} pip install -r ${AGENT_DIR}/requirements.txt && \
+    conda run -n ${CONDA_ENV_NAME} pip install --upgrade anthropic httpx && \
     conda clean -afy
 
 # put all the agent files in the expected location
