Pass OpenAI key to the container

--- a/agents/aide/config.yaml
+++ b/agents/aide/config.yaml
@@ -106,8 +106,9 @@ aide/claude-3-5-sonnet:
   env_vars:
     <<: *env_vars
     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-aide/claude-sonnet-4-5-20250929:
+aide/claude-sonnet-4-5:
   <<: *defaults
   kwargs:
     <<: *kwargs_common
@@ -117,6 +118,7 @@ aide/claude-sonnet-4-5-20250929:
   env_vars:
     <<: *env_vars
     ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
 aide/llama-3.1-405b-instruct:
   <<: *defaults
